--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-hook-form": "^7.53.2",
+    "react-toastify": "^10.0.6",
+    "sonner": "^1.7.0",
     "zod": "^3.23.8"
   }
 }
